--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ hazy = "0.1"
 # Include unmerged changes to support flushing and various async improvements.
 libhoney-rust = { git = "https://github.com/ramosbugs/libhoney-rust", rev = "98710516cb63d3393d26a22d5493a421c550525a" }
 # Adds `SpanProcessor::is_exporter` for upstream filtering
-opentelemetry = "0.19"
+opentelemetry = { version = "0.19", git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "ecf0dda5686dc45470ae02993a4748c289c407de" }
 serde_json = "1.0"
 thiserror = "1.0"
 tokio = { version = "1.25", features = ["rt"] }
